Fix word breaks/overflow text on add to cart buttons

--- a/.dev/sass/compat/woocommerce.scss
+++ b/.dev/sass/compat/woocommerce.scss
@@ -283,6 +283,7 @@ body.woocommerce-cart {
 .woocommerce ul.products li.product a.add_to_cart_button {
 	width: 100%;
 	text-align: center;
+	white-space: normal;
 }
 
 @media #{$small-only} {
