--- a/style.css
+++ b/style.css
@@ -2550,7 +2550,8 @@ body.woocommerce-cart .primer-wc-cart-sub-menu {
 
 .woocommerce ul.products li.product a.add_to_cart_button {
   width: 100%;
-  text-align: center; }
+  text-align: center;
+  white-space: normal; }
 
 @media only screen and (max-width: 40.063em) {
   .primer-wc-cart-menu .primer-wc-cart-sub-menu .widget_shopping_cart {
